force-app/main/default/objects/Oktopost_Campaign__c/Oktopost_Campaign__c.object-meta.xml
<CustomObject>
    <label>Oktopost Campaign</label>
    <nameField>
        <label>Campaign Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Oktopost Campaigns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>