force-app/main/default/objects/Oktopost_Campaign__c/fields/Board_Conversions__c.field-meta.xml
<CustomField>
    <fullName>Board_Conversions__c</fullName>
    <label>Board Conversions</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>