force-app/main/default/objects/Oktopost_Campaign__c/fields/Clicks__c.field-meta.xml
<CustomField>
    <fullName>Clicks__c</fullName>
    <label>Clicks</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>