force-app/main/default/objects/Oktopost_Campaign__c/fields/Conversions__c.field-meta.xml
<CustomField>
    <fullName>Conversions__c</fullName>
    <label>Conversions</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>