force-app/main/default/objects/Oktopost_Campaign__c/fields/Last_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Last_Conversion__c</fullName>
    <label>Last Conversion</label>
    <type>DateTime</type>
</CustomField>