force-app/main/default/objects/Oktopost_Campaign__c/fields/Last_Post_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Post_Date__c</fullName>
    <label>Last Post Date</label>
    <type>DateTime</type>
</CustomField>