force-app/main/default/objects/Oktopost_Campaign__c/fields/Total_Posts__c.field-meta.xml
<CustomField>
    <fullName>Total_Posts__c</fullName>
    <label>Total Posts</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>